src/webtop/device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: generic-device-plugin-dri
  namespace: kube-system
  labels:
    app.kubernetes.io/name: generic-device-plugin-dri
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: generic-device-plugin-dri
  template:
    metadata:
      labels:
        app.kubernetes.io/name: generic-device-plugin-dri
    spec:
      nodeSelector:
        kubernetes.io/hostname: jim-pi
      tolerations:
        - operator: Exists
          effect: NoSchedule
        - operator: Exists
          effect: NoExecute
      containers:
        - name: generic-device-plugin
          image: squat/generic-device-plugin@sha256:ccb0d72edcdf28d2b208e5017cb238e990b6760ccda1cfa2c11fbed181d270ac
          args:
            - --device
            - |
              name: dri
              groups:
                - paths:
                    - path: /dev/dri/renderD128
                    - path: /dev/dri/card0
                    - path: /dev/dri/card1
          securityContext:
            privileged: true
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
            - name: device-plugin
              mountPath: /var/lib/kubelet/device-plugins
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 100Mi
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: device-plugin
          hostPath:
            path: /var/lib/kubelet/device-plugins
            type: Directory
